...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_padding_size_medium"
                android:paddingEnd="@dimen/margin_padding_size_medium">

                <ImageView
                    android:id="@+id/img_user"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/gambar_pengguna_git"
                    android:padding="@dimen/margin_padding_size_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_size_medium"
                    android:paddingEnd="@dimen/margin_padding_size_medium"
                    android:textAppearance="?attr/textAppearanceHeadline4"
...
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_user"
                    tools:text="Jake Wharton" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_size_medium"
                    android:paddingEnd="@dimen/margin_padding_size_medium"
                    android:textAppearance="?attr/textAppearanceBody1"
...
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name"
                    tools:text="JakeWharton" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_xsmall"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_size_medium"
                    android:paddingEnd="@dimen/margin_padding_size_medium"
...
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tv_company_content"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textAppearance="?textAppearanceSubtitle2"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
...
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tv_repository_content"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textAppearance="?attr/textAppearanceSubtitle2"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
...
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tv_followers_content"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textAppearance="?attr/textAppearanceSubtitle2"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
...
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tv_following_content"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textAppearance="?attr/textAppearanceSubtitle2"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
...
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin_padding_size_large"
        android:contentDescription="@string/favorite"
        android:src="@drawable/ic_favorite_24" />
...
