...
                    android:paddingStart="@dimen/margin_padding_size_medium"
                    android:paddingEnd="@dimen/margin_padding_size_xxsmall"
                    android:src="@drawable/ic_back_24"
                    app:tint="?attr/colorOnPrimary" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_view_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin_padding_size_medium"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_search">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_holder_user" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
...
