<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_24"
        android:title="@string/home_title" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorited_24"
        android:title="@string/favorite_title" />
    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/setting_title" />
</menu>